--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -6,9 +6,67 @@ on:
   pull_request:
     branches:
       - main
+
 jobs:
-  Lint:
+  lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
-      - run: make lint
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+
+      - name: Cache pip
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
+      - name: Cache npm
+        uses: actions/cache@v4
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      - name: Run linter (Makefile / Node / Python fallback)
+        shell: bash
+        run: |
+          set -euo pipefail
+          if [ -f Makefile ]; then
+            echo "Found Makefile — running make lint"
+            make lint
+          elif [ -f package.json ] && grep -q "\"lint\"" package.json; then
+            echo "Found package.json with a lint script — installing and running npm run lint"
+            npm ci
+            npm run lint --if-present
+          elif [ -f pyproject.toml ] || [ -f requirements.txt ] || ls *.py >/dev/null 2>&1; then
+            echo "Detected Python project — installing dev dependencies and running flake8 if available"
+            python -m pip install --upgrade pip
+            if [ -f requirements.txt ]; then
+              pip install -r requirements.txt || true
+            fi
+            if [ -f pyproject.toml ]; then
+              # try install dev extras if defined; ignore errors
+              python -m pip install ".[dev]" || true
+            fi
+            if command -v flake8 >/dev/null 2>&1; then
+              flake8 .
+            else
+              echo "flake8 not found — skipping Python lint (install flake8 or add it to your dev deps)"
+            fi
+          else
+            echo "No Makefile, package.json with lint, or Python project detected. Skipping lint step."
+            # To make lint required instead of skipped, change the next line to "exit 1"
+            exit 0
+          fi
